--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,10 +1,15 @@
 <div class = "row">
-	<div class= "col-md-3"
-	<%= image_tag @restaurant.image_url %>
+	<div class= "col-md-3">
+
+<p id="notice"><%=notice %></p>
+<%= image_tag @restaurant.image_url %>
 
 <h2>
   <%= @restaurant.name %>
 </h2>
+
+<div class="star-rating" data-score = <%= @avg_rating %> ></div>
+<p><%="#{@reviews.length} reviews" %></p>
 
 <p>
   <strong>Address:</strong>
@@ -21,19 +26,29 @@
   <%= link_to @restaurant.website, @restaurant.website %>
 </p>
 
-<%= link_to 'Write a Review', new_restaurant_review_path(@restaurant), class: "btn btn-primary" %>
-	</div>
-	<div class = "col-md-9"
+	<%= link_to 'Write a Review', new_restaurant_review_path(@restaurant), class: "btn btn-primary" %>
+</div>
+	
+<div class = "col-md-9"
 	<% if @reviews.blank? %>
 		<h3> No reviews yet. Be there first to write one!</h3>
 	<% else %>
-	<% @reviews.each do |review| %>
-	<div class="star-rating" data-score = <%= review.rating %> ></div>
-	<p><%= review.comment %></p>
-	<% end %>
-	<% end %>
+		<table class = "table">
+			<tbody>
+				<% @reviews.each do |review| %>
+					<tr>
+						<td>
+							<div class="star-rating" data-score = <%= review.rating %> ></div>
+							<p><%= h(review.comment).gsub(/\n/, '<br/>').html_safe %></p>
+						</td>
+					</tr>
+				<% end %>
+			</tbody>
+		</table>
+		<% end %>
 	</div>
 </div>
+
 
 <%= link_to 'Edit', edit_restaurant_path(@restaurant), class: "btn btn-link" %> |
 <%= link_to 'Back', restaurants_path, class: "btn btn-link" %>
